--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,5 +4,10 @@
 body
 {
 	padding-top: 60px;
-	background-color: #C2FFA3;
+	background-color: red;
+}
+
+form-horizontal
+{
+	background-color: red;
 }
