--- a/app/views/register/_register.html.erb
+++ b/app/views/register/_register.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @customer, :url => {:controller => :register, :action => :registerCustomer} do |c| %>
+<%= form_for @customer, :url => {:controller => :register, :action => :registerCustomer}, html: {class: "form-horizontal"} do |c| %>
   <% if @customer.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@customer.errors.count, "error") %> </h2>
