--- a/app/views/register/_form.html.erb
+++ b/app/views/register/_form.html.erb
@@ -14,35 +14,35 @@
   <div class="field form-group">
     <%= p.label(:primaryStyle, class: "col-sm-2 control-label") %>
     <div class="col-sm-10">
-      <%= p.text_field(:primaryStyle, class: "form-control") %>
+      <%= p.text_field(:primaryStyle, class: "form-control", placeholder: "style 1") %>
     </div>
     
   </div>
   <div class="field form-group">
     <%= p.label(:secondaryStyle, class: "col-sm-2 control-label") %>
     <div class="col-sm-10">
-      <%= p.text_field(:secondaryStyle, class: "form-control") %>
+      <%= p.text_field(:secondaryStyle, class: "form-control", placeholder: "style 2") %>
     </div>
     
   </div>
   <div class="field form-group">
     <%= p.label(:size, class: "col-sm-2 control-label") %>
     <div class="col-sm-10">
-      <%= p.text_field(:size, class: "form-control") %>
+      <%= p.text_field(:size, class: "form-control", placeholder: "size") %>
     </div>
     
   </div>
 	 <div class="field form-group">
     <%= p.label(:height, class: "col-sm-2 control-label") %>
     <div class="col-sm-10">
-      <%= p.text_field(:height, class: "form-control") %>
+      <%= p.text_field(:height, class: "form-control", placeholder: "height") %>
     </div>
     
   </div>
 	 <div class="field form-group">
     <%= p.label(:shoeSize, class: "col-sm-2 control-label") %>
     <div class="col-sm-10">
-      <%= p.text_field(:shoeSize, class: "form-control") %>
+      <%= p.text_field(:shoeSize, class: "form-control", placeholder: "shoe size, please. yes, it is important. thank you. :) ") %>
     </div>
     
   </div>
