--- a/app/views/register/_register.html.erb
+++ b/app/views/register/_register.html.erb
@@ -11,16 +11,21 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= c.label :email %><br>
-    <%= c.text_field :email %>
+  <div class="field form-group">
+    <%= c.label(:email, class: "col-sm-2 control-label") %>
+    <div class="col-sm-10">
+      <%= c.text_field(:email, class: "form-control", type: "email", placeholder: "e-mail") %>
+    </div>
   </div>
-  <div class="field">
-    <%= c.label :password %><br>
-    <%= c.text_field :password %>
+  <div class="field form-group">
+    <%= c.label(:password, class: "col-sm-2 control-label") %>
+    <div class="col-sm-10">
+      <%= c.text_field(:password, class: "form-control", type: "password", placeholder: "password") %>
+    </div>
+
   </div>
   <div class="actions">
-    <%= c.submit("Enter") %>
+    <%= c.submit("Enter", class: "btn btn-default pull-right") %>
   </div>
 <% end %>
 
