--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
 				<li><a>S T Y L E</a></li>
 			</ul>
 			<ul class="nav navbar-nav pull-right">
-				<li><a href="about.html">About</a></li>
+				<li><a href="about">About</a></li>
 				<li><a>Blog</a></li>
 				<li><a>Contact</a></li>
 				<li><a>Terms</a></li>
