Add (testing) functionality of chechbox by images in _form.html.erb. File application.css.scss specified styles, and application.js toogles css of chosen image (jquery).

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,3 +11,17 @@ form-horizontal
 {
 	background-color: red;
 }
+
+.img-label{
+	border: 4px solid #eee;
+	border-radius: 5px;
+	padding: 5px;
+}
+
+.red-border{
+	border: 4px solid #c0d890;
+}
+
+input[type=checkbox]{
+	display: none;
+}
