--- a/app/views/register/_form.html.erb
+++ b/app/views/register/_form.html.erb
@@ -16,36 +16,52 @@
     <div class="col-sm-10">
       <%= p.text_field(:primaryStyle, class: "form-control", placeholder: "style 1") %>
     </div>
-    
   </div>
+
   <div class="field form-group">
     <%= p.label(:secondaryStyle, class: "col-sm-2 control-label") %>
     <div class="col-sm-10">
       <%= p.text_field(:secondaryStyle, class: "form-control", placeholder: "style 2") %>
     </div>
-    
   </div>
+
   <div class="field form-group">
     <%= p.label(:size, class: "col-sm-2 control-label") %>
     <div class="col-sm-10">
       <%= p.text_field(:size, class: "form-control", placeholder: "size") %>
-    </div>
-    
+    </div> 
   </div>
+
 	 <div class="field form-group">
     <%= p.label(:height, class: "col-sm-2 control-label") %>
     <div class="col-sm-10">
       <%= p.text_field(:height, class: "form-control", placeholder: "height") %>
     </div>
-    
   </div>
+
 	 <div class="field form-group">
     <%= p.label(:shoeSize, class: "col-sm-2 control-label") %>
     <div class="col-sm-10">
       <%= p.text_field(:shoeSize, class: "form-control", placeholder: "shoe size, please. yes, it is important. thank you. :) ") %>
     </div>
-    
   </div>
+  
+  <div class="field form-group">
+  <%= p.label(:TEST, class: "col-sm-2 control-label") %>
+    <div class="col-sm-3">
+       <label class="img-label " for="style1"><img src="/assets/suit1.jpg" width="100" height="100"></label>
+       <input id="style1" type="checkbox" value="style1" autocomplete="off"> <br>
+    </div>
+    <div class="col-sm-3">
+       <label class="img-label" for="style2"><img src="/assets/suit1.jpg" width="100" height="100"></label>
+       <input id="style2" type="checkbox" value="style2" autocomplete="off"> <br>
+    </div>
+    <div class="col-sm-3">
+       <label class="img-label" for="style3"><img src="/assets/suit1.jpg" width="100" height="100"></label>
+       <input id="style3" type="checkbox" value="style3" autocomplete="off"> <br>
+    </div>
+  </div>
+
   <div class="actions">
     <%= p.submit("Enter", class: "pull-right btn btn-default") %>
   </div>
