--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,13 +13,16 @@ form-horizontal
 }
 
 .img-label{
-	border: 4px solid #eee;
+	border: 1px solid #eee;
 	border-radius: 5px;
 	padding: 5px;
 }
 
 .red-border{
-	border: 4px solid #c0d890;
+	  border-color: #66afe9;
+	  outline: 0;
+	  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
+	          box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
 }
 
 input[type=checkbox]{
