--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,8 +29,12 @@
 								<div class="form-group">
 									<input type="password" placeholder="Password" class="form-control">
 								</div>
-								<button type="submit" class="btn btn-success">Sign in</button> 
-								<a href="#" class="pull-right"><small>Forgot?</small></a>
+								<div class="form-group">
+									<button type="submit" class="btn btn-success">Sign in</button> 
+								</div>
+								<div class="form-group">
+									<a href="#" class="col-xs-offset"><small>Forgot?</small></a>
+								</div>
 							</form>
 						</ul>
 					</li>
