Basic style to 'Getting Started' button

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,23 @@
-<button>
-	<%= link_to "Register", register_path %>
+<button id="getting-started-button" class="btn btn-default btn-lg pull-right vert-offset-top-5">
+	<%= link_to( "Getting Started") %>
 </button>
+
+<!-- BIG HEADER -->
+<div id="section1">
+	
+</div>
+
+<!-- HOW IT WORKS -->
+<div id="section2">
+	
+</div>
+
+<!-- FEATURES -->
+<div id="section3">
+	
+</div>
+
+<!-- PRICE -->
+<div id="section4">
+	
+</div>
