--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,9 +1,29 @@
+<!--
 <button id="getting-started-button" class="btn btn-default btn-lg pull-right vert-offset-top-5">
 	<%= link_to( "Getting Started") %>
 </button>
+-->
 
 <!-- BIG HEADER -->
 <div id="section1">
+	
+	<div class="jumbotron">
+		<div class="container ">
+			<div class="row screen-only">
+				<div class="col-md-4 center-text">
+					<h3>NO MORE LOOKING FOR COOL CLOTH. <BR>THEY NOW COME DIRECTLY TO YOUR HOUSE. </h3>
+					
+				</div>
+			</div>
+			<a id="getting-started-button-screen" class="btn btn-primary btn-lg pull-right" href="#" role="button">GET STARTED</a>
+			<div class="row mobile-only darken-bg">
+				<div class="col-md-4 center-text">
+					<h4>NO MORE LOOKING FOR COOL CLOTH. <BR>THEY NOW COME DIRECTLY TO YOUR HOUSE. </h4>
+					<a id="getting-started-button-mobile" class="btn btn-primary btn-lg pull-right" href="#" role="button">GET STARTED</a>
+				</div>
+			</div>
+		</div>
+	</div>
 	
 </div>
 
