--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -29,7 +29,29 @@
 
 <!-- HOW IT WORKS -->
 <div id="section2">
-	
+	<div id="how-it-works" class="container underline-div">
+		<h1 class="center-text">How it works</h1>
+			<div class="row center-text">
+				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+					<div class="thumbnail">
+						<img src="css/bp.gif" alt="...">
+						<h3>1. Sign up</h3>
+					</div>
+				</div>
+				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+					<div class="thumbnail">
+					<img src="css/bp.gif" alt="...">
+					<h3>2. Choose your style</h3>
+				</div>
+				</div>
+				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+					<div class="thumbnail">
+					<img src="css/bp.gif" alt="...">
+					<h3>3. Check your mailbox!</h3>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 
 <!-- FEATURES -->
