--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,8 +3,7 @@
 
 body
 {
-	padding-top: 60px;
-	padding-bottom: 60px;
+	padding-top: 60px;	
 	background-color: #eee;
 }
 
@@ -167,4 +166,9 @@ margin-bottom: 0em;
 {
     background-color: rgba(0,0,0,0.3);
     padding-bottom: 20px;
+}
+
+.navbar-bottom
+{
+	margin-bottom: 0px;
 }
