--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <!-- footer -->
 	<div id="footer">
-		<div class="navbar navbar-default navbar-fixed-bottom">
+		<div class="navbar navbar-default navbar-bottom">
 			<ul class="nav navbar-nav">
 				<li><a>S T Y L E</a></li>
 			</ul>
