Modified the final registration page to link to the first registration page if no preference has been set by the user

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,7 @@
-<<<<<<< HEAD
+
 <%= link_to "Register", :controller => :register, :action => :index %>
 
-=======
+
 <!--
 <button id="getting-started-button" class="btn btn-default btn-lg pull-right vert-offset-top-5">
 	<%= link_to( "Getting Started") %>
@@ -19,7 +19,8 @@
 					
 				</div>
 			</div>
-			<a id="getting-started-button-screen" class="btn btn-primary btn-lg pull-right" href="#" role="button">GET STARTED</a>
+                        
+			<a id="getting-started-button-screen" class="btn btn-primary btn-lg pull-right" href="register" role="button">GET STARTED</a>
 			<div class="row mobile-only darken-bg">
 				<div class="col-md-4 center-text">
 					<h4>NO MORE LOOKING FOR COOL CLOTH. <BR>THEY NOW COME DIRECTLY TO YOUR HOUSE. </h4>
@@ -67,4 +68,4 @@
 <div id="section4">
 	
 </div>
->>>>>>> 2206801d91acec1262a0911d97aef547146d44d8
+
