--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -172,3 +172,18 @@ margin-bottom: 0em;
 {
 	margin-bottom: 0px;
 }
+
+ul li
+{
+	display: inline-block;
+	padding: 5px 5px 0px 0px;
+}
+
+#footer
+{
+	maring: 0px;
+	padding: 5px;
+	background-color: #f8f8f8;
+	border-top: 1px solid #ccc;
+	margin-top: 20px;
+}
