--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,14 +1,16 @@
 <!-- footer -->
-	<div id="footer">
-		<div class="navbar navbar-default navbar-bottom">
-			<ul class="nav navbar-nav">
+<div id="footer"  >
+	<div class="row">
+		<div class="container">
+			<ul class="pull-left">
 				<li><a>S T Y L E</a></li>
 			</ul>
-			<ul class="nav navbar-nav pull-right">
+			<ul class="pull-right">
 				<li><a href="about">About</a></li>
 				<li><a>Blog</a></li>
 				<li><a>Contact</a></li>
 				<li><a>Terms</a></li>
 			</ul>
+		</div>
 	</div>
-
+</div>
