--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -7,6 +7,7 @@ body
 	background-color: #eee;
 }
 
+
 .center-text {
 	text-align: center;
 }
@@ -186,4 +187,9 @@ ul li
 	background-color: #f8f8f8;
 	border-top: 1px solid #ccc;
 	margin-top: 20px;
+}
+
+.padding-top-60
+{
+	padding-top: 60px;
 }
