--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,12 +1,14 @@
 
 
 
+<%= button_to "Register", { :controller => "register", :action => "index" }, :method => :get %>
 
-<!--
+<!-- 
 <button id="getting-started-button" class="btn btn-default btn-lg pull-right vert-offset-top-5">
-	<%= link_to( "Getting Started") %>
+	<%= link_to ("Register")  %>
 </button>
 -->
+
 
 <!-- BIG HEADER -->
 <div id="section1" class="">
