--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,5 @@
 
 
-
 <%= button_to "Register", { :controller => "register", :action => "index" }, :method => :get %>
 
 <!-- 
@@ -13,7 +12,7 @@
 <!-- BIG HEADER -->
 <div id="section1" class="">
 	
-	<div class="jumbotron">
+	<div class="jumbotron" id="home-top">
 		<div class="container ">
 			<div class="row screen-only">
 				<div class="col-md-4 center-text">
