--- a/app/views/register/index.html.erb
+++ b/app/views/register/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-<h1><strong>Choose your style <strong></h1>
+<h1><strong>Choose your style </strong></h1>
 <hr>
 <%= render 'form' %>
 
