--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,4 @@
 
-
-<%= button_to "Register", { :controller => "register", :action => "index" }, :method => :get %>
-
 <!-- 
 <button id="getting-started-button" class="btn btn-default btn-lg pull-right vert-offset-top-5">
 	<%= link_to ("Register")  %>
@@ -21,11 +18,16 @@
 				</div>
 			</div>
                         
-			<a id="getting-started-button-screen" class="btn btn-primary btn-lg pull-right" href="register" role="button">GET STARTED</a>
+			<%= button_to "GET STARTED", 
+			{ :controller => "register", :action => "index" },
+			{:method => :get, :class => "btn btn-primary btn-lg pull-right"} %>
+				
 			<div class="row mobile-only darken-bg">
 				<div class="col-md-4 center-text">
 					<h4>NO MORE LOOKING FOR COOL CLOTH. <BR>THEY NOW COME DIRECTLY TO YOUR HOUSE. </h4>
-					<%= link_to "GET STARTED", {:controller => :register, :action => :index}, :class => "btn btn-primary btn-lg pull-right" %>
+					<<%= button_to "GET STARTED", 
+			{ :controller => "register", :action => "index" },
+			{:method => :get, :class => "btn btn-primary btn-lg pull-right"} %>
 				</div>
 			</div>
 		</div>
@@ -126,7 +128,9 @@
 	<div class="container center-text vert-offset-top-4 vert-offset-bottom-2">
 		<div class="row">
 			<div class="col-xs-12">
-				<%= link_to "GET STARTED", {:controller => :register, :action => :index}, :class => "btn btn-primary btn-lg" %>
+				<%= button_to "GET STARTED", 
+			{ :controller => "register", :action => "index" },
+			{:method => :get, :class => "btn btn-primary btn-lg"} %>
 			</div>
 		</div>
 	</div>
