Made Logo button  functional

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
 			</button>
 			<ul class="nav navbar-nav">
 				<li>
-					<a class="navbar-brand" href="#home-top">L O G O</a>
+					<a class="navbar-brand" href="home">L O G O</a>
 				</li>
 			</ul>
 			
