--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,9 +17,13 @@
 		</div>
 		<div id="navbar" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#how-it-works">How it works</a></li>
-				<li><a href="#features">Features</a></li>
-				<li><a href="#pricing">Pricing</a></li>
+			
+				<% if(request.original_url != "http://localhost:3000/register") %>
+					<li><a href="#how-it-works">How it works</a></li>
+					<li><a href="#features">Features</a></li>
+					<li><a href="#pricing">Pricing</a></li>
+				<% end %>
+				
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Log in <span class="caret"></span></a>
 					<ul class="dropdown-menu" role="menu">
@@ -39,12 +43,14 @@
 						</form>
 					</ul>
 				</li>
-				<li>
-					<%= button_to("Get Started", 
-								{ :controller => "register", :action => "index" }, 
-								{:method => :get, :class => "btn btn-primary navbar-btn"}) %>
+				<% if(request.original_url != "http://localhost:3000/register") %>
+					<li>
+						<%= button_to("Get Started", 
+									{ :controller => "register", :action => "index" }, 
+									{:method => :get, :class => "btn btn-primary navbar-btn"}) %>
 
-				</li>
+					</li>
+				<% end %>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				
