--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,8 +23,11 @@
 					<li><a href="#features">Features</a></li>
 					<li><a href="#pricing">Pricing</a></li>
 				<% end %>
-				
-				<li class="dropdown">
+                            
+				 <% if logged_in? %>
+                      <li>  <%= link_to "Log Out", logout_path %> </li>
+                 <% else %>
+				 <li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Log in <span class="caret"></span></a>
 					<ul class="dropdown-menu" role="menu">
 						<form class="navbar-form navbar-login" role="form">
@@ -43,14 +46,16 @@
 						</form>
 					</ul>
 				</li>
-				<% if(request.original_url != "http://localhost:3000/register") %>
-					<li>
-						<%= button_to("Get Started", 
+				    <% if(request.original_url != "http://localhost:3000/register" && 
+                                        request.original_url != "http://localhost:3000/registerCustomer") %>
+					    <li>
+						   <%= button_to("Get Started", 
 									{ :controller => "register", :action => "index" }, 
 									{:method => :get, :class => "btn btn-primary navbar-btn"}) %>
 
-					</li>
-				<% end %>
+					    </li>
+				    <% end %>
+               <% end %>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				
