Added facebook like button

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -11,6 +11,13 @@
 				<li><a>Contact</a></li>
 				<li><a>Terms</a></li>
 			</ul>
+			<div
+  				class="fb-like"
+  				data-share="true"
+  				data-width="450"
+  				data-show-faces="true">
+			</div>
 		</div>
 	</div>
 </div>
+
