Basic layout for account.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -198,3 +198,12 @@ ul li
 {
 	display: none;
 }
+
+/* ACCOUNTS */
+#content{
+	padding: 20px 20px 0px 20px;
+	border-right: 1px solid #ddd;
+	border-left: 1px solid #ddd;
+	border-bottom: 1px solid #ddd;
+	margin-bottom: 40px;
+}
