--- a/app/views/accounts/news.html.erb
+++ b/app/views/accounts/news.html.erb
@@ -1,1 +1,10 @@
-This is where newsfeeds will be.	
+<ul class="nav nav-tabs nav-justified">
+	<li role="presentation" class="active"><%= link_to "News", news_path %></li>
+	<li role="presentation"><%= link_to "Profile", profile_path %></li>
+	<li role="presentation"><%= link_to	"Settings", settings_path %></li>
+</ul>
+
+
+<div id="content">
+	FASD	
+</div>
