--- a/app/views/accounts/profile.html.erb
+++ b/app/views/accounts/profile.html.erb
@@ -1,1 +1,9 @@
-profile.html.erb
+<ul class="nav nav-tabs nav-justified">
+	<li role="presentation"><%= link_to "News", news_path %></li>
+	<li role="presentation" class="active"><%= link_to "Profile", profile_path %></li>
+	<li role="presentation"><%= link_to	"Settings", settings_path %></li>
+</ul>
+
+<div id="content">
+	FASD	
+</div>
