Basic layout news.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -200,10 +200,34 @@ ul li
 }
 
 /* ACCOUNTS */
+#calendar {
+	max-width: 900px;
+	margin: 0 auto;
+}
+
+.panel, .panel-default{
+	padding:20px;
+}
+
+#comments{
+	margin-top: 20px;
+}
+#comment{
+	min-height: 40px;
+}
+textarea{
+	max-width: 100%;
+	max-height: 150px;
+}
 #content{
 	padding: 20px 20px 0px 20px;
 	border-right: 1px solid #ddd;
 	border-left: 1px solid #ddd;
 	border-bottom: 1px solid #ddd;
 	margin-bottom: 40px;
+}
+
+.thumbnail{
+	background: rgba(0,0,0,0.0);
+	border: none;
 }
