--- a/app/views/accounts/news.html.erb
+++ b/app/views/accounts/news.html.erb
@@ -6,5 +6,72 @@
 
 
 <div id="content">
-	FASD	
+	<div class="row">
+		<div class="col-sm-8">
+			<div class="well">
+				<div id="posts">
+					<div id="post">
+						<div class="panel panel-default">
+							<div class="row">
+								<div class="col-xs-2" >
+										<div class="thumbnail">
+											<img src="assets/ph.jpg" alt="..." class="img-circle">
+										</div>
+									</div>
+									<div class="col-xs-10" >
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+										tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+										quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+										consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+										cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+										proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+									</div>
+									<div id="comments" class="col-xs-12">
+										<div class="well well-sm">
+											<div class="comment">
+												<div id="row">
+													<div class="col-xs-1 col-sm-2">
+														<div class="thumbnail">
+															<img src="ph.jpg" alt="..." class="img-circle">
+														</div>
+													</div>
+													<div class="col-xs-11 col-sm-10">
+														Lorem 
+													</div>
+												</div>
+												</div>
+												<hr>
+												<div class="comment">
+													<div id="row">
+														<div class="col-xs-1 col-sm-2">
+															<div class="thumbnail">
+																<img src="ph.jpg" alt="..." class="img-circle">
+															</div>
+														</div>
+														<div class="col-xs-11 col-sm-10">
+															Lorem 
+														</div>
+													</div>
+												</div>
+												
+												<form>
+													<div class="form-group">
+														<textarea class="form-control"></textarea>
+													</div>
+													<button class="btn btn-primary">Comment</button>
+												</form>
+										</div>
+									</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-4">
+			<div class="well">
+				
+			</div>
+		</div>
+	</div>
 </div>
