--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,20 +1,23 @@
+//= require accounts
+//= require pages
+//= require register
+//= require sessions
+//= require style
+//= require stylists
+//= require fullcalendar
+//= require fullcalendar.print
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
 body
 {
-	padding-top: 60px;	
-	background-color: #eee;
+	padding-top: 60px;
 }
 
 
 .center-text {
 	text-align: center;
-}
-
-form-horizontal
-{
-	background-color: red;
 }
 
 .img-label{
@@ -209,22 +212,9 @@ ul li
 	padding:20px;
 }
 
-#comments{
-	margin-top: 20px;
-}
-#comment{
-	min-height: 40px;
-}
 textarea{
 	max-width: 100%;
 	max-height: 150px;
-}
-#content{
-	padding: 20px 20px 0px 20px;
-	border-right: 1px solid #ddd;
-	border-left: 1px solid #ddd;
-	border-bottom: 1px solid #ddd;
-	margin-bottom: 40px;
 }
 
 .thumbnail{
