--- a/app/assets/stylesheets/register.css.scss
+++ b/app/assets/stylesheets/register.css.scss
@@ -2,7 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-label{
-	border: 2px solid red;
+#content{
+	padding: 20px 20px 0px 20px;
+	border-right: 1px solid #ddd;
+	border-left: 1px solid #ddd;
+	border-bottom: 1px solid #ddd;
+	margin-bottom: 40px;
 }
-
