--- a/app/views/accounts/news.html.erb
+++ b/app/views/accounts/news.html.erb
@@ -104,31 +104,36 @@
 									<div id="comments" class="col-xs-12">
 										<div class="well well-sm">
 											<div class="comment">
-												<div id="row">
-													<div class="col-xs-1 col-sm-2">
+												<div class="row">
+													<div class="col-xs-offset-2 col-xs-8 col-sm-offset-0 col-sm-2">
 														<div class="thumbnail">
-															<img src="ph.jpg" alt="..." class="img-circle">
+															<img src="assets/ph.jpg" alt="..." class="img-circle">
 														</div>
 													</div>
-													<div class="col-xs-11 col-sm-10">
-														Lorem 
+													<div class="col-xs-12 col-sm-10">
+														Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+														tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+														quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+														consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+														cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+														proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 													</div>
 												</div>
 												</div>
 												<hr>
 												<div class="comment">
-													<div id="row">
-														<div class="col-xs-1 col-sm-2">
+													<div class="row">
+														<div class="col-xs-offset-2 col-xs-8 col-sm-offset-0 col-sm-2">
 															<div class="thumbnail">
-																<img src="ph.jpg" alt="..." class="img-circle">
+																<img src="assets/ph.jpg" alt="..." class="img-circle">
 															</div>
 														</div>
-														<div class="col-xs-11 col-sm-10">
+														<div class="col-xs-12 col-sm-10">
 															Lorem 
 														</div>
 													</div>
 												</div>
-												
+												<hr>
 												<form>
 													<div class="form-group">
 														<textarea class="form-control"></textarea>
