--- a/app/views/accounts/profile.html.erb
+++ b/app/views/accounts/profile.html.erb
@@ -2,13 +2,152 @@
 	<li role="presentation"><%= link_to "News", news_path %></li>
 	<li role="presentation" class="active"><%= link_to "Profile", profile_path %></li>
 	<li role="presentation"><%= link_to	"Settings", settings_path %></li>
+	<li role="presentation"><%= link_to	"Messages", messages_path %></li>
 </ul>
 
 <div id="content">
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.	
+	<div>
+		<div class="row">
+			  <div class="col-md-2">
+			    <%= link_to "Change image", class: "thumbnail" do %>
+			      <img src="assets/ph.jpg" alt="..." class="img-circle">
+			    <% end %>
+			  </div>
+		</div>	
+	</div>
+	<div>
+		<div class="well">
+			<div class="row">
+				<div class="col-md-6">
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<div class="panel-title">
+								Recently searched stylists
+							</div>
+						</div>
+						<div class="panel-body">
+							<div class="row">
+								<div class="col-sm-4">
+									<div class="thumbnail">
+										<img src="assets/ph.jpg">
+									</div>
+								</div>
+								<div class="col-sm-8">
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+									tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+									quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+									consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+									cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+									proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+								</div>
+							</div>
+							<hr>
+							<div class="row">
+								<div class="col-sm-4">
+									<div class="thumbnail">
+										<img src="assets/ph.jpg">
+									</div>
+								</div>
+								<div class="col-sm-8">
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+									tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+									quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+									consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+									cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+									proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<div class="panel-title">
+								Recommended stylists
+							</div>
+						</div>
+						<div class="panel-body">
+							<div class="row">
+								<div class="col-sm-4">
+									<div class="thumbnail">
+										<img src="assets/ph.jpg">
+									</div>
+								</div>
+								<div class="col-sm-8">
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+									tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+									quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+									consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+									cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+									proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+								</div>
+							</div>
+							<hr>
+							<div class="row">
+								<div class="col-sm-4">
+									<div class="thumbnail">
+										<img src="assets/ph.jpg">
+									</div>
+								</div>
+								<div class="col-sm-8">
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+									tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+									quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+									consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+									cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+									proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-12">
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<div class="panel-title">
+								Favorite stylists
+							</div>
+						</div>
+						<div class="panel-body">
+							<div class="row">
+								<div class="col-sm-2">
+									<div class="thumbnail">
+										<img src="assets/ph.jpg">
+									</div>
+								</div>
+								<div class="col-sm-2">
+									<div class="thumbnail">
+										<img src="assets/ph.jpg">
+									</div>
+								</div>
+								<div class="col-sm-2">
+									<div class="thumbnail">
+										<img src="assets/ph.jpg">
+									</div>
+								</div>
+								<div class="col-sm-2">
+									<div class="thumbnail">
+										<img src="assets/ph.jpg">
+									</div>
+								</div>
+								<div class="col-sm-2">
+									<div class="thumbnail">
+										<img src="assets/ph.jpg">
+									</div>
+								</div>
+								<div class="col-sm-2">
+									<div class="thumbnail">
+										<img src="assets/ph.jpg">
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			
+		</div>
+	</div>
 </div>
