--- a/app/views/accounts/settings.html.erb
+++ b/app/views/accounts/settings.html.erb
@@ -6,5 +6,24 @@
 </ul>
 
 <div id="content">
-	
+	<div class="well">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<div class="panel-title">
+					Info for stylists
+				</div>
+			</div>
+			<div class="panel-body">
+				<%= form_tag({},{:class => "form-horizontal"}) do %>
+					<div class="form-group">
+						<%= label_tag("Interests", nil, {class: "col-sm-2 control-label"}) %>
+						<div class="col-sm-10">
+							<%= text_field_tag("Interests", nil, options = {"class" => "form-control", "placeholder" => "separate with comas, ex.: sports, musicles, reading books"}) %>
+						</div>
+
+					</div>
+				<% end %>
+			</div>
+		</div>
+	</div>
 </div>
