--- a/app/views/register/_register.html.erb
+++ b/app/views/register/_register.html.erb
@@ -1,3 +1,7 @@
+
+ <%= link_to "Register using Facebook", "/auth/facebook" %>  
+  <%= link_to "Register using Linkedin", "/auth/linkedin" %>  
+
 <%= form_for @customer, :url => {:controller => :register, :action => :registerCustomer}, html: {class: "form-horizontal"} do |c| %>
   <% if @customer.errors.any? %>
     <div id="error_explanation">
