Edit 'News' page.

--- a/app/assets/stylesheets/accounts.css.scss
+++ b/app/assets/stylesheets/accounts.css.scss
@@ -4,7 +4,9 @@
 
 #comments{
 	margin-top: 20px;
+	border: 1px solid #ddd;
+	padding: 40px;
 }
 #comment{
-	min-height: 40px;
+	min-height: 40px;	
 }
