--- a/app/views/accounts/messages.html.erb
+++ b/app/views/accounts/messages.html.erb
@@ -1,8 +1,3 @@
-<ul class="nav nav-tabs nav-justified">
-	<li role="presentation"><%= link_to "News", news_path %></li>
-	<li role="presentation"><%= link_to "Profile", profile_path %></li>
-	<li role="presentation"><%= link_to	"Settings", settings_path %></li>
-	<li role="presentation"  class="active"><%= link_to	"Messages", messages_path %></li>
-</ul>
-
-<div id="content"></div>
+<div class="page-header">
+	<h1>Inbox</h1>
+</div>
