Edit style of news, settings. Tiny change in css.

--- a/app/assets/stylesheets/accounts.css.scss
+++ b/app/assets/stylesheets/accounts.css.scss
@@ -4,8 +4,10 @@
 
 #comments{
 	margin-top: 20px;
-	border: 1px solid #ddd;
-	padding: 40px;
+	border-top: 1px solid #ddd;
+	padding-left: 120px;
+	padding-right: 120px;
+	padding-top: 10px;
 }
 #comment{
 	min-height: 40px;	
