--- a/app/views/stylists/post.html.erb
+++ b/app/views/stylists/post.html.erb
@@ -2,17 +2,37 @@
 <div class="page-header">
 	<h2>Make a public post</h2>
 </div>
-<div class="well">
-	<%= form_tag do %>
-		<%= text_area_tag(:post, "", size: "24x6", class: "form-control") %>
-		<%= radio_button_tag(:audience, "child") %>
-		<%= label_tag(:audience_label, "Customers") %>
-		<%= radio_button_tag(:audience, "adult") %>
-		<%= label_tag(:audience_label, "Non customers") %>
-		<%= radio_button_tag(:audience, "adult") %>
-		<%= label_tag(:audience_label, "All") %>
+<div class="well clearfix">
+	<%= form_tag({},{:class => ""}) do %>
+
+		<div class="form-group">
+			<%= text_area_tag(:post, "", size: "24x6", class: "form-control") %>
+		</div>
+
+
+		<label class="radio-inline form-group">
+			<%= radio_button_tag(:audience, "child") %>
+			Customer
+		</label>
+
+		<label class="radio-inline form-group">
+			<%= radio_button_tag(:audience, "adult") %>
+			Not customer
+		</label>
+
+		<label class="radio-inline form-group">
+			<%= radio_button_tag(:audience, "adult") %>
+			Everybody
+		</label>
+
+		<div id="image-upload">
+			<div class="form-group">
+	    		<label for="exampleInputFile" class="control-label">File input</label>
+	    		<input type="file" id="exampleInputFile">
+	    		<p class="help-block"></p>
+			</div>
+		</div>
+		<%= button_tag("Post", {class: "btn btn-default pull-right"})%>
 	<% end %>
-	<div id="image-upload">
-		Image uploading happens here.
-	</div>
+	
 </div>
