--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -38,8 +38,8 @@
                     <li>  <%= link_to "Log Out", logout_path %> </li>
                  <% else %>
 				 <li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Log in <span class="caret"></span></a>
-					<ul class="dropdown-menu" role="menu">
+					<a href="/login" >Log in </a>
+					<!--<ul class="dropdown-menu" role="menu">
 						<form class="navbar-form navbar-login" role="form">
 							<div class="form-group">
 								<input type="text" placeholder="Email" class="form-control">
@@ -54,7 +54,7 @@
 								<a href="#" class="col-xs-offset"><small>Forgot?</small></a>
 							</div>
 						</form>
-					</ul>
+					</ul>-->
 				</li>
 				    <% if(request.original_url != "http://localhost:3000/register" && 
                                         request.original_url != "http://localhost:3000/registerCustomer") %>
