Add index2 controller + view: this has scrolling header.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -6,13 +6,14 @@
 //= require stylists
 //= require fullcalendar
 //= require fullcalendar.print
+//= require index2
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
 body
 {
-	padding-top: 60px;
+	padding-top: 55px;
 }
 
 
