--- a/app/assets/stylesheets/index2.css.scss
+++ b/app/assets/stylesheets/index2.css.scss
@@ -7,34 +7,8 @@
 /* Padding below the footer and lighter body text */
 
 body {
-  padding-bottom: 40px;
+  padding-bottom: 0px;
   color: #5a5a5a;
-}
-
-
-/* CUSTOMIZE THE NAVBAR
--------------------------------------------------- */
-
-/* Special class on .container surrounding .navbar, used for positioning it into place. */
-.navbar-wrapper {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  z-index: 20;
-}
-
-/* Flip around the padding for proper display in narrow viewports */
-.navbar-wrapper > .container {
-  padding-right: 0;
-  padding-left: 0;
-}
-.navbar-wrapper .navbar {
-  padding-right: 15px;
-  padding-left: 15px;
-}
-.navbar-wrapper .navbar .container {
-  width: auto;
 }
 
 
@@ -43,8 +17,9 @@ body {
 
 /* Carousel base class */
 .carousel {
-  height: 500px;
+  /*height: 300px;*/
   margin-bottom: 60px;
+  background-size: contain;
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
@@ -53,7 +28,7 @@ body {
 
 /* Declare heights because of positioning of img element */
 .carousel .item {
-  height: 500px;
+  /*height: 300px;*/
   background-color: #777;
 }
 .carousel-inner > .item > img {
@@ -62,6 +37,16 @@ body {
   left: 0;
   min-width: 100%;
   height: 500px;
+
+}
+
+@media screen{
+	.carousel .item{
+		height: 700px;
+	}
+	.carousel{
+		height: 700px;
+	}
 }
 
 
