Fix 'container' bug.

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -24,7 +24,7 @@
 
 
 <!-- BIG HEADER -->
-
+<div class="container">
 <div id="section1" class="">
 	<div class="jumbotron" id="home-top">
 		<div class="container ">
@@ -155,4 +155,4 @@
 		</div>
 	</div>
 </div>
-
+</div>
