--- a/app/views/stylists/post.html.erb
+++ b/app/views/stylists/post.html.erb
@@ -1,4 +1,4 @@
-
+<div class="container">
 <div class="page-header">
 	<h2>Make a public post</h2>
 </div>
@@ -35,4 +35,5 @@
 		<%= button_tag("Post", {class: "btn btn-default pull-right"})%>
 	<% end %>
 	
+</div>
 </div>
