--- a/app/views/accounts/settings.html.erb
+++ b/app/views/accounts/settings.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="page-header">
 	<h1>Settings</h1>
 </div>
@@ -74,4 +75,5 @@
 			</div>
 		<% end %>
 	</div>
+</div>
 </div>
