--- a/app/views/register/index.html.erb
+++ b/app/views/register/index.html.erb
@@ -1,6 +1,6 @@
-<p id="notice"><%= notice %></p>
-<h1><strong>Choose your style </strong></h1>
-<hr>
-<%= render 'form' %>
-
-
+<div class="container">
+	<p id="notice"><%= notice %></p>
+	<h1><strong>Choose your style </strong></h1>
+	<hr>
+	<%= render 'form' %>
+</div>
