Made a new stylist controller, and model -- along with a stylists table in the database

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,7 +2,7 @@
 //= require register
 //= require sessions
 //= require style
-//= require stylists
+//= require stylist
 //= require fullcalendar
 //= require fullcalendar.print
 //= require index2
