--- a/app/views/index2/index2.html.erb
+++ b/app/views/index2/index2.html.erb
@@ -1,45 +1,24 @@
-    <!-- Carousel
-    ================================================== -->
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-<!--       <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol> -->
-
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img src="assets/bp.gif" alt="First slide">
-          <div class="container">
-<!--             <div class="carousel-caption">
-              <h1>Example headline.</h1>
-              <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
-            </div -->>
-          </div>
-        </div>
-        <div class="item">
-          <img src="assets/bp.gif" alt="Second slide">
-<!--           <div class="container">
-            <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+<div class="your-class" id="moving-header">
+        <!-- <div class="img-bg"><div id="img-header-1"></div></div>
+        <div class="img-bg"><div id="img-header-2"></div></div>
+        <div class="img-bg"><div id="img-header-3"></div></div> -->
+        <div class="img-bg"><img src="assets/s1.jpg" style="margin-left:auto; margin-right: auto; width:100%;"></div>
+        <div class="img-bg"><img src="assets/s2.jpg" style="margin-left:auto; margin-right: auto; width:100%;"></div>
+        <div class="img-bg"><img src="assets/s3.jpg" style="margin-left:auto; margin-right: auto; width:100%;"></div>
+    </div>
+    <!-- Static content on top of carousel. -->
+    <div class="main-text hidden-xs">
+        <div class="col-md-12 text-center">
+            <h1>
+                Static Headline And Content</h1>
+            <h3>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </h3>
+            <div class="">
+                <%= button_to "GET STARTED",  { :controller => "register", :action => "index" }, {:method => :get, :class => "btn btn-primary btn-lg"} %>
             </div>
-          </div> -->
         </div>
-        <div class="item">
-          <img src="assets/bp.gif" alt="Third slide">
-<!--           <div class="container">
-            <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-            </div>
-          </div> -->
-        </div>
-      </div>
+    </div>
 
     </div><!-- /.carousel -->
     <!-- Static content on top of carousel. -->
@@ -137,3 +116,17 @@
 
     </div><!-- /.container -->
 
+  <script type="text/javascript">
+        $(document).ready(function(){
+            $('.your-class').slick({
+                fade: true,
+                autoplay: true,
+                autoplaySpeed: 3000,
+                speed: 2000,
+                centerMode: true,
+                centerPadding: '100px',
+                dots:true,
+                infinite: true
+            });
+        });
+    </script>
