--- a/app/views/index2/index2.html.erb
+++ b/app/views/index2/index2.html.erb
@@ -1,10 +1,7 @@
-<div class="your-class" id="moving-header">
-        <!-- <div class="img-bg"><div id="img-header-1"></div></div>
-        <div class="img-bg"><div id="img-header-2"></div></div>
-        <div class="img-bg"><div id="img-header-3"></div></div> -->
-        <div class="img-bg"><img src="assets/s1.jpg" style="margin-left:auto; margin-right: auto; width:100%;"></div>
-        <div class="img-bg"><img src="assets/s2.jpg" style="margin-left:auto; margin-right: auto; width:100%;"></div>
-        <div class="img-bg"><img src="assets/s3.jpg" style="margin-left:auto; margin-right: auto; width:100%;"></div>
+    <div id="fading-header">
+      <div id="fading-img-3"></div>
+      <div id="fading-img-2"></div>
+      <div id="fading-img-1"></div>
     </div>
     <!-- Static content on top of carousel. -->
     <div class="main-text hidden-xs">
